<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profile</string>
    <string name="trendingTitle">Trending Screen</string>
    <string name="todayTitle">Today Screen</string>
    <string name="followingTitle">Following Screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="email">sesiagino@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="trending">Trending</string>
    <string name="following">Following</string>
    <string name="remove">Remove</string>
    <string name="alerts">Alerts</string>
    <string name="setAlert">Set Alert Preferences:</string>

    <string-array name="tabTitles">
        <item>Headlines</item>
        <item>Today</item>
        <item>Following</item>
    </string-array>

    <string name="title_activity_main2">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appearance">Appearance:</string>
    <string name="choose_theme_text">Choose theme</string>
</resources>