<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_main">



    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved"
            android:title="@string/saved_articles"/>

    </group>
        <item
            android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>
                    <item android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_baseline_settings_24"
                        android:title="@string/settings"/>
                    <item android:id="@+id/nav_signout"
                        android:icon="@drawable/ic_baseline_play_for_work_24"
                        android:title="@string/sign_out"/>
                </group>
            </menu>
        </item>

</menu>